--- a/example.env
+++ b/example.env
@@ -1,2 +1,6 @@
-DISCORD_TOKEN=
-CHANNEL_ID=
+DISCORD_TOKEN=your_discord_bot_token
+CHANNEL_ID=your_discord_channel_id
+COUNTRY_ID=desired_country_code # As shown in HLL in Serverlist. Like in Germany "GER"
+RED_ON_PLAYERS=0 # So at 0 til 4 Players
+YELLOW_ON_PLAYERS=5 # From 5 to 49 Players 
+GREEN_ON_PLAYERS=50 # Above 49 Playerss
